[gd_scene load_steps=11 format=3 uid="uid://c8akrrjlh40bl"]

[ext_resource type="Texture2D" uid="uid://cq4dklxryynaf" path="res://Assets/Cocina/tabla.png" id="2_k58ov"]
[ext_resource type="Texture2D" uid="uid://r87ilr13ewq8" path="res://Assets/Cocina/rollito.png" id="3_8bnf4"]
[ext_resource type="Script" path="res://scripts/balancin.gd" id="3_mdaor"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_4nhxp"]
a = Vector2(-4, -38)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_qcewv"]
a = Vector2(1, -1)
b = Vector2(44, -22)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_s42iw"]
a = Vector2(0, -22)
b = Vector2(44, -1)

[sub_resource type="CircleShape2D" id="CircleShape2D_3sp45"]
radius = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tpqiy"]
size = Vector2(7, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_jwa11"]
radius = 3.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o13xq"]
size = Vector2(5, 20.5)

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource("3_mdaor")

[node name="seesaw_top" type="Sprite2D" parent="."]
position = Vector2(-6, -25)
rotation = -0.104082
scale = Vector2(0.163, 0.2)
texture = ExtResource("2_k58ov")

[node name="seesaw_right" type="Sprite2D" parent="."]
visible = false
position = Vector2(20.9316, -12.0923)
rotation = -1.15192
scale = Vector2(0.163059, 0.2)
texture = ExtResource("2_k58ov")

[node name="seesaw_left" type="Sprite2D" parent="."]
visible = false
position = Vector2(21, -11)
rotation = -2.04972
scale = Vector2(0.163, 0.2)
texture = ExtResource("2_k58ov")

[node name="seesaw_collision_top" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="seesaw_collision_top"]
position = Vector2(-4, -10)
shape = SubResource("SegmentShape2D_4nhxp")

[node name="seesaw_collision_left" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="seesaw_collision_left"]
position = Vector2(-1, 0)
shape = SubResource("SegmentShape2D_qcewv")

[node name="seesaw_collision_right" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="seesaw_collision_right"]
shape = SubResource("SegmentShape2D_s42iw")

[node name="pivot" type="CollisionShape2D" parent="."]
position = Vector2(22, -6)
shape = SubResource("CircleShape2D_3sp45")

[node name="left_switch" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_switch"]
position = Vector2(4, -26)
shape = SubResource("RectangleShape2D_tpqiy")

[node name="right_switch" type="Area2D" parent="."]
position = Vector2(-29, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_switch"]
position = Vector2(65, -26)
shape = SubResource("RectangleShape2D_tpqiy")

[node name="detect_ball" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_ball"]
position = Vector2(41, -5)
shape = SubResource("CircleShape2D_jwa11")

[node name="top_switch" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_switch"]
position = Vector2(-6.5, -37.25)
shape = SubResource("RectangleShape2D_o13xq")

[node name="Rollito" type="Sprite2D" parent="."]
position = Vector2(25, -6)
scale = Vector2(0.07, 0.07)
texture = ExtResource("3_8bnf4")

[connection signal="area_entered" from="left_switch" to="left_switch" method="_on_left_area_entered"]
[connection signal="body_entered" from="left_switch" to="." method="_on_left_switch_body_entered"]
[connection signal="area_entered" from="right_switch" to="left_switch" method="_on_right_area_entered"]
[connection signal="body_entered" from="right_switch" to="." method="_on_right_switch_body_entered"]
[connection signal="body_entered" from="detect_ball" to="." method="_on_detect_ball_body_entered"]
[connection signal="body_entered" from="detect_ball" to="left_switch" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="detect_ball" to="." method="_on_detect_ball_body_exited"]
[connection signal="body_entered" from="top_switch" to="." method="_on_top_switch_body_entered"]
